2003-03-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03821] fix for pmake
	* Makefile.in: use $(srcdir)/... instead of $<

2003-03-13  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* etc.c: treatment for "%7E" is added to  expandName()

2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03819] support cd build && ../configure
	* Makefile.in: add VPATH
			add MV
			use $(top_srcdir), $<, $@
	* acinclude.m4 (AC_W3M_VERSION): use $srcdir
	* configure.in (AC_W3M_VERSION): move
	* mktable.c (main): basename

2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (distclean): added

2003-03-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03818] fix autoconf
	* Makefile.in (CGIBIN_DIR): added
		(AUXBIN_DIR): added
		(HELP_DIR): added
		(RC_DIR): added
		(MAKE_ARGS): added
		(TARGET): use $(package)
		(MAN1_TARGET): ditto
		(install): use $(*_DIR)
	* acinclude.m4 (AC_W3M_TERMLIB): added
		(AC_W3M_GC): default search prefix /usr /usr/local $HOME
			fix searches
		(AC_W3M_SSL): fix bugs
	* config.h (RC_DIR): remove tailing /
		(SYS_MAILCAP): use ETC_DIR
		(SYS_MIMETYPES): ditto
		(USER_MIMETYPES): homedir
	* configure.in: quote
		(AC_W3M_TERMLIB): use
	* Bonus/oldconfigure.sh: rewrite

2003-03-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03816] --enable-lynx => --enable-keymap=lynx 
	* acinclude.m4 (AC_W3M_KEYMAP): --enable-lynx => --enable-keymap=lynx
	* Bonus/oldconfigure.sh: ditto

2003-03-12  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03814] fix autoconf
	* acinclude.m4: quote variables
	* Bonus/oldconfigure.sh: configure using old config.param

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03812] fix autoconf
	* acinclude.m4 (AC_W3M_IMAGE): default is autodetect x11,fb

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03810] fix autoconf
	* acinclude.m4 (AC_W3M_EXTLIBS): use $dir
			(AC_W3M_GC): PREFIX is optional
			(AC_W3M_SSL): PREFIX is optional