@@ -1,5 +1,10 @@
 2003-03-14  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 03822] Re: etc.c: treatment for "%7E" is added to  expandName()
+	* etc.c (expandName): rewrite with strncasecmp
+
+2003-03-14  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 03821] fix for pmake
 	* Makefile.in: use $(srcdir)/... instead of $<
 
@@ -7530,4 +7535,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.793 2003/03/13 15:29:42 ukai Exp $
+$Id: ChangeLog,v 1.794 2003/03/13 15:40:40 ukai Exp $
